feat: integrate authentication

--- a/package.json
+++ b/package.json
@@ -17,8 +17,9 @@
         "@types/markdown-it": "0.0.7",
         "@types/moment": "^2.13.0",
         "@types/requirejs": "^2.1.31",
-        "browser-sync": "^2.26.5",
+        "browser-sync": "^2.26.7",
         "connect-history-api-fallback": "^1.6.0",
+        "msal": "^1.0.2",
         "typescript": "^3.5.1",
         "vue": "^2.6.10",
         "vue-class-component": "^7.1.0",
