ci: Fix path of service deployment manifest

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -47,7 +47,7 @@ stages:
                 inputs:
                   action: deploy
                   namespace: $(namespace.staging)
-                  manifests: ./.deploy/deployment.yml|./deploy/service.yml
+                  manifests: ./.deploy/deployment.yml|./.deploy/service.yml
                   containers: |
                     $(image):$(tag)
 
@@ -71,6 +71,6 @@ stages:
                 inputs:
                   action: deploy
                   namespace: $(namespace.prod)
-                  manifests: ./.deploy/deployment.yml|./deploy/service.yml
+                  manifests: ./.deploy/deployment.yml|./.deploy/service.yml
                   containers: |
                     $(image):$(tag)
