--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -35,6 +35,8 @@ extends:
     staging:
       namespace: rex-staging
       environment: staging-rex-sierrasoftworks-com.rex-staging
+      healthcheck: https://staging.rex.sierrasoftworks.com/
     production:
       namespace: rex-prod
       environment: rex-sierrasoftworks-com.rex-prod
+      healthcheck: https://rex.sierrasoftworks.com/
