--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
-    "name": "vue-template",
+    "name": "rex-ui",
     "version": "1.0.0",
-    "description": "A template which shows how a Vue website can be built without the need for Babel or WebPack",
+    "description": "A user interface for Rex, allowing you to manage ideas and share them with others.",
     "author": "Benjamin Pannell <admin@sierrasoftworks.com>",
     "repository": {
         "type": "git",
-        "url": "https://github.com/SierraSoftworks/vue-template.git"
+        "url": "https://github.com/SierraSoftworks/rex-ui.git"
     },
     "license": "MIT",
     "scripts": {
@@ -13,18 +13,18 @@
         "build": "tsc"
     },
     "devDependencies": {
-        "@types/highlight.js": "^9.12.3",
+        "@types/highlight.js": "^9.12.4",
         "@types/markdown-it": "0.0.8",
-        "@types/requirejs": "^2.1.31",
+        "@types/requirejs": "^2.1.32",
         "browser-sync": "^2.26.7",
         "connect-history-api-fallback": "^1.6.0",
-        "dayjs": "^1.8.16",
-        "msal": "^1.1.3",
-        "typescript": "^3.6.4",
-        "vue": "^2.6.10",
-        "vue-class-component": "^7.1.0",
-        "vue-router": "^3.1.3",
-        "vuex": "^3.1.1"
+        "dayjs": "^1.8.28",
+        "msal": "^1.3.2",
+        "typescript": "^3.9.5",
+        "vue": "^2.6.11",
+        "vue-class-component": "^7.2.3",
+        "vue-router": "^3.3.2",
+        "vuex": "^3.4.0"
     },
     "dependencies": {}
 }
