--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
         "@types/highlight.js": "^9.12.4",
         "@types/markdown-it": "0.0.8",
         "@types/requirejs": "^2.1.32",
+        "@types/spark-md5": "^3.0.2",
         "browser-sync": "^2.26.7",
         "connect-history-api-fallback": "^1.6.0",
         "dayjs": "^1.8.28",
