ci: Switch to passing folder for k8s-deploy action

--- a/.github/workflows/deploy-aks.yml
+++ b/.github/workflows/deploy-aks.yml
@@ -6,7 +6,7 @@ on:
     branches: [ main ]
 
 env:
-  MANIFESTS: ./.deploy/*.yml
+  MANIFESTS: ./.deploy
   IMAGE: sierrasoftworks/rex
 
   STAGING_CLUSTER: k8s-common
