ci: Explicitly provide manifest file names

--- a/.github/workflows/deploy-aks.yml
+++ b/.github/workflows/deploy-aks.yml
@@ -6,7 +6,9 @@ on:
     branches: [ main ]
 
 env:
-  MANIFESTS: ./.deploy
+  MANIFESTS: |
+    ./.deploy/deployment.yml
+    ./.deploy/service.yml
   IMAGE: sierrasoftworks/rex
 
   STAGING_CLUSTER: k8s-common
