--- a/.github/workflows/deploy-aks.yml
+++ b/.github/workflows/deploy-aks.yml
@@ -103,7 +103,8 @@ jobs:
           namespace: "${{ env.STAGING_NAMESPACE }}"
           manifests: "${{ env.MANIFESTS }}"
           images: |
-            "docker.pkg.github.com/${{ github.repository }}/${{ github.event.repository.name }}:${{ steps.version.outputs.version }}"
+            docker.pkg.github.com/${{ github.repository }}/${{ github.event.repository.name }}:${{ steps.version.outputs.version }}
+            ${{ env.IMAGE }}:${{ steps.version.outputs.version }}
   
   healthcheck-staging:
     needs: deploy-staging
@@ -144,7 +145,8 @@ jobs:
           namespace: "${{ env.LIVE_NAMESPACE }}"
           manifests: "${{ env.MANIFESTS }}"
           images: |
-            "docker.pkg.github.com/${{ github.repository }}/${{ github.event.repository.name }}:${{ steps.version.outputs.version }}"
+            docker.pkg.github.com/${{ github.repository }}/${{ github.event.repository.name }}:${{ steps.version.outputs.version }}
+            ${{ env.IMAGE }}:${{ steps.version.outputs.version }}
   
   healthcheck-live:
     needs: deploy-live
