--- a/.travis.yml
+++ b/.travis.yml
@@ -5,4 +5,4 @@ services:
   - docker
 
 script:
-  - docker build -t sierrasoftworks/vue-template:latest .
+  - docker build -t sierrasoftworks/rex-ui:latest .
