fix: Ensure that we publish the UI correctly

--- a/.github/workflows/deploy-azstorage.yml
+++ b/.github/workflows/deploy-azstorage.yml
@@ -68,6 +68,7 @@ jobs:
           client-id: ${{ env.STAGING_DEPLOYMENT_CLIENT_ID }}
           
       - name: Copy Artifacts to Storage
+        uses: azure/CLI@v1
         with:
           inlineScript: |
             echo "Uploading Site Contents"
@@ -109,6 +110,7 @@ jobs:
           client-id: ${{ env.LIVE_DEPLOYMENT_CLIENT_ID }}
           
       - name: Copy Artifacts to Storage
+        uses: azure/CLI@v1
         with:
           inlineScript: |
             echo "Uploading Site Contents"
