ci: Disable deployments from dependabot branches

--- a/.github/workflows/deploy-azstorage.yml
+++ b/.github/workflows/deploy-azstorage.yml
@@ -48,6 +48,7 @@ jobs:
 
   deploy-staging:
     runs-on: ubuntu-latest
+    if: github.actor != 'dependabot[bot]'
     needs: [build]
     environment:
       name: Staging
