--- a/package.json
+++ b/package.json
@@ -13,19 +13,19 @@
         "build": "tsc"
     },
     "devDependencies": {
-        "@types/highlight.js": "^10.1.0",
         "@types/markdown-it": "^12.2.3",
         "@types/punycode": "^2.1.0",
-        "@types/requirejs": "^2.1.32",
+        "@types/requirejs": "^2.1.34",
         "@types/spark-md5": "^3.0.2",
-        "browser-sync": "^2.26.14",
-        "connect-history-api-fallback": "^1.6.0",
-        "dayjs": "^1.11.5",
-        "msal": "^1.4.11",
-        "typescript": "^4.8.3",
-        "vue": "^2.6.12",
+        "browser-sync": "^2.27.11",
+        "connect-history-api-fallback": "^2.0.0",
+        "dayjs": "^1.11.7",
+        "highlight.js": "^11.7.0",
+        "msal": "^1.4.17",
+        "typescript": "^4.9.4",
+        "vue": "^2.7.14",
         "vue-class-component": "^7.2.6",
-        "vue-router": "^3.5.1",
+        "vue-router": "^3.6.5",
         "vuex": "^3.6.2"
     }
 }
